<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg12"
    android:orientation="vertical" >

    <RelativeLayout
          android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/app_name"
                android:textColor="#ff4300"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_scroll"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:focusable="true"
        android:padding="20dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_soild"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/username"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/img_login_line"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@drawable/ic_login_line" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:paddingLeft="20dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000" />
            </LinearLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bt_ok_config"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_register_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ask_register"
                android:textColor="#61a8f0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>